# rust_charis

./: .gdb_history  Cargo.toml  README.md  example.asm
src/: asm.rs  cpu.rs  lib.rs  main.rs
src/cpu/: control.rs  datapath.rs  ram.rs
