[package]
name = "rust_charis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
structopt = "0.3.23"
log = "0.4.14"
simplelog = "0.11.1"
phf = { version = "0.10.1", features = ["macros"] }